# monkey-moore

./: .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/i18n/source/: messages-pt_br.po  original.po
assets/icons/: mmoore.xpm
assets/platform/linux/: monkey-moore.desktop
benchmarks/: CMakeLists.txt  bench_search.cpp
images/: Thumbs.db
include/mmoore/: byteswap.hpp  memory_utils.hpp  monkey_moore.hpp  object_pred.hpp  search_engine.hpp  text_utils.hpp
language/pt_br/: monkeymoore.mo
resources/: mmoore.xpm
resources/msw/: monkey_res.rc
scripts/: package-appimage.sh
src/: byteswap.hpp  constants.hpp  monkey_about.hpp  monkey_app.cpp  monkey_app.hpp  monkey_error.hpp  monkey_frame.cpp  monkey_frame.hpp  monkey_moore.hpp  monkey_options.hpp  monkey_prefs.cpp  monkey_prefs.hpp  monkey_seqs.hpp  monkey_table.hpp  monkey_thread.hpp  object_pred.hpp
src/core/: CMakeLists.txt  debug_logging.hpp  encoding.hpp  memory_utils.hpp  monkey_moore.cpp  search_engine.cpp
src/gui/: CMakeLists.txt  about_dialog.cpp  about_dialog.hpp  byteswap.hpp  constants.hpp  drop_target.cpp  drop_target.hpp  filesystem_utils.hpp  monkey_about.hpp  monkey_app.cpp  monkey_app.hpp  monkey_error.hpp  monkey_frame.cpp  monkey_frame.hpp  monkey_options.hpp  monkey_prefs.cpp  monkey_prefs.hpp  monkey_seqs.hpp  monkey_table.hpp  monkey_thread.hpp  search_thread.hpp
src/gui/dialogs/: about.cpp  about.hpp  about_dialog.hpp  custom_sequences.cpp  custom_sequences.hpp  monkey_options.hpp  monkey_seqs.hpp  monkey_table.hpp  settings.cpp  settings.hpp  table_creator.cpp  table_creator.hpp
src/gui/utils/: byteswap.hpp  filesystem_utils.hpp
test/MonkeyMooreTests/: CoreAlgorithmTest.cpp  MonkeyMooreTests.vcxproj  MonkeyMooreTests.vcxproj.filters  ObjectPredicatesTest.cpp
tests/: CMakeLists.txt  common.hpp  core_tests.cpp  test_monkey_moore.cpp  test_search_engine.cpp  test_text_utils.cpp
